[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
alloy = { version = "1.0.22", features = ["full"] }
candid = "0.10"
cargo_metadata = "0.19.1"
ic-test = {version = "0.1", features = ["evm"]}
pocket-ic = "9.0.2"
serde = "1.0.219"
serde_bytes = "0.11.17"
tokio = { version = "1", features = ["full"] }
convert_case = "0.8.0"